Fix Word Spacing Font And Fix Some Issues Change Language

--- a/public/i18n/translations/en.json
+++ b/public/i18n/translations/en.json
@@ -64,5 +64,8 @@
     "footerHelp": "Help",
     "footerSignup": "Sign up",
     "footerStatistics": "Statistics",
-    "footerAddedWords": "Added Words: 0"
+    "footerAddedWords": "Added Words: 0",
+
+    "footerEnglish": "English",
+    "footerVietnamese": "Vietnamese"
 }
