--- a/public/i18n/translations/vn.json
+++ b/public/i18n/translations/vn.json
@@ -64,5 +64,8 @@
     "footerHelp": "Trợ giúp",
     "footerSignup": "Đăng ký",
     "footerStatistics": "Số liệu thống kê",
-    "footerAddedWords": "Added Words: 0"
+    "footerAddedWords": "Từ đã thêm: 0",
+
+    "footerEnglish": "Tiếng Anh",
+    "footerVietnamese": "Tiếng Việt"
 }
