Add transition smooth when close tooltip covid-19

--- a/public/i18n/translations/en.json
+++ b/public/i18n/translations/en.json
@@ -67,5 +67,7 @@
     "footerAddedWords": "Added Words: 0",
 
     "footerEnglish": "English",
-    "footerVietnamese": "Vietnamese"
+    "footerVietnamese": "Vietnamese",
+
+    "toolTipContent": "Stay Home And Take Your Learning With You!"
 }
