--- a/public/i18n/translations/vn.json
+++ b/public/i18n/translations/vn.json
@@ -67,5 +67,7 @@
     "footerAddedWords": "Từ đã thêm: 0",
 
     "footerEnglish": "Tiếng Anh",
-    "footerVietnamese": "Tiếng Việt"
+    "footerVietnamese": "Tiếng Việt",
+
+    "toolTipContent": "Hãy ở nhà để bảo vệ sức khỏe của bạn và cộng đồng!"
 }
