--- a/public/i18n/translations/vn.json
+++ b/public/i18n/translations/vn.json
@@ -1,33 +1,33 @@
 {
-    "headerValue": "Giá trị",
-    "headerOverview": "Tổng quan",
-    "headerTopic": "Chủ đề",
-    "headerFeature": "Chức năng",
-    "headerTestimonial": "Đánh giá",
-    "headerLogin": "Đăng nhập",
-    "headerRegister": "Đăng ký",
-    "headerLogout": "Đăng xuất",
+    "headerValue": "Giá Trị",
+    "headerOverview": "Về WordsMine!",
+    "headerTopic": "Chủ Đề",
+    "headerFeature": "Chức Năng",
+    "headerTestimonial": "Đánh Giá",
+    "headerLogin": "Đăng Nhập",
+    "headerRegister": "Đăng Ký",
+    "headerLogout": "Đăng Xuất",
 
-    "bannerTitle": "Learn any words, be unstoppable!",
+    "bannerTitle": "Vốn từ vựng phong phú hướng ta đến tương lai không giới hạn!",
     "bannerDes1": "Cách nhanh nhất để học từ vựng",
     "bannerDes2": "Bất kỳ đâu, bất kỳ lúc nào",
-    "bannerTryNowButton": "Try Now",
+    "bannerTryNowButton": "Đăng Ký Ngay -> ",
 
-    "valueConvenientTitle": "Thuận tiện",
-    "valueConvenientDes": "Không bỏ lỡ từ mới bạn nhìn thấy hàng ngày!",
-    "valueCloudStorageTitle": "Lưu trữ đám mây",
-    "valueCloudStorageDes": "Collect and save vocabulary from any where, any time",
+    "valueConvenientTitle": "Thuận Tiện",
+    "valueConvenientDes": "Không bỏ lỡ từ vựng mới mà bạn nhìn thấy hàng ngày!",
+    "valueCloudStorageTitle": "Lưu Trữ Đám Mây",
+    "valueCloudStorageDes": "Thu thập và ghi nhớ từ vựng mới ở bất kỳ đâu, bất cứ khi nào",
     "valueFlashCardTitle": "Flashcard",
-    "valueFlashCardDes": "Testing your knowledge and being master with smart Flashcard mode",
-    "valueLexicographerTitle": "Lexicographer",
-    "valueLexicographerDes": "Enrich your vocabulary bank 10x times",
+    "valueFlashCardDes": "Kiểm tra lại để ghi nhớ các từ vựng mới qua chức năng FlashCard",
+    "valueLexicographerTitle": "Chuyên Gia Ngôn Ngữ",
+    "valueLexicographerDes": "Cải thiện vốn từ vựng gấp 10 lần",
 
     "descriptionTitle": "Wordsmine là gì?",
-    "descriptionDes": "Wordsmine là ứng dụng học ngôn ngữ thứ hai đầu tiên giúp bạn thu thập từ vựng bạn thấy trong các hoạt động lướt Internet hàng ngày và học chúng nhanh hơn bằng cách cung cấp cho bạn các phương pháp khoa học và các ví dụ theo ngữ cảnh được lấy từ các nguồn đáng tin cậy.",
+    "descriptionDes": "Wordsmine là ứng dụng giúp thu thập các từ vựng bạn thấy xung quanh các hoạt động lướt Internet hàng ngày và học chúng nhanh hơn, được xây dựng cho những bạn muốn cải thiện vốn từ vựng trong thời gian ngắn.",
 
-    "topicTitle": "Give it a try! Let's go!",
-    "topicWebExtension": "Web Extension",
-    "topicMobileApp": "Mobile App",
+    "topicTitle": "Dùng Thử WordsMine!",
+    "topicWebExtension": "Ứng dụng trên Chrome",
+    "topicMobileApp": "Ứng dụng iOS",
 
     "featureTitle": "Bạn có thể làm gì với Wordsmine?",
     "featureSaveFromSelectionTitle": "Save words from selection",
