--- a/public/i18n/translations/vn.json
+++ b/public/i18n/translations/vn.json
@@ -30,41 +30,41 @@
     "topicMobileApp": "Ứng dụng iOS",
 
     "featureTitle": "Bạn có thể làm gì với Wordsmine?",
-    "featureSaveFromSelectionTitle": "Save words from selection",
+    "featureSaveFromSelectionTitle": "Lưu từ vựng bất kỳ từ vùng chữ được chọn",
     "featureSaveFromSelectionDes": "Bạn có thể lưu trữ bất kỳ từ nào từ bất kỳ trang nào. Tất cả các từ vựng được lưu lại để xem lại sau này chỉ ở một nơi",
-    "featureSaveFromClipboardTitle": "Save words from clipboard",
-    "featureSaveFromClipboardDes": "Bạn đang vội? Đừng lo lắng, chúng tôi cũng cho phép bạn lưu các từ khi đang lướt web",
-    "featureCollectWordsFromMobileTitle": "Collect words from mobile",
-    "featureCollectWordsFromMobileDes": "Catch some new words when browsing web in mobile, we can capture them too",
-    "featureFlashcardToLearnTitle": "Use flashcard mode to memorize your learning",
-    "featureFlashcardToLearnDes": "No more forgetting every new word you see everyday, we help put them to stay engraved in your memory",
-    "featureLookupDefinitionTitle": "Lookup for definition from reliable sources",
-    "featureLookupDefinitionDes": "Learn to use your words wisely in proper context, word definition is provided from different reputable sources",
-    "featureCustomDefinitionTitle": "Customize your definition as you want",
-    "featureCustomDefinitionDes": "Personalize the word definition to your desire so it can be more memorable only for you",
+    "featureSaveFromClipboardTitle": "Lưu từ vựng từ đã lưu trong bộ nhớ đệm",
+    "featureSaveFromClipboardDes": "Bạn đang vội? Đừng lo lắng, chúng tôi cũng cho phép bạn lưu các từ mà đã lưu khi đang lướt web",
+    "featureCollectWordsFromMobileTitle": "Lưu từ vựng từ trình duyệt trên điện thoại",
+    "featureCollectWordsFromMobileDes": "Ngay cả khi bạn gặp các tự vựng khi đang lướt web, ta cũng có thể lưu chúng vào kho từ để xem lại sau này",
+    "featureFlashcardToLearnTitle": "Dùng FlashCard để ghi nhớ các từ vựng đã lưu trong kho từ",
+    "featureFlashcardToLearnDes": "Các từ vựng bạn gặp mỗi ngày sẽ không còn trôi qua nữa, thay vì vậy, nền tảng sẽ giúp bạn ghi nhớ tất cả các từ vựng đó",
+    "featureLookupDefinitionTitle": "Tự động cung cấp định nghĩa từ các từ điển danh tiếng",
+    "featureLookupDefinitionDes": "Bạn có thể học cách sử dụng các từ vựng trong các ngữ cách khác nhau như người bản ngữ, định nghĩa từ được cung cấp từ các từ điển uy tín giúp bạn có nhiều định nghĩa khác nhau",
+    "featureCustomDefinitionTitle": "Thay đổi định nghĩa từ vựng theo ý thích",
+    "featureCustomDefinitionDes": "Dựa trên định nghĩa gợi ý, bạn có thể cá nhân hoá lại định nghĩa và cách dùng từ để từ có thể trở nên thân quen hơn",
 
-    "testimonialContent": "WordsMine! has helped me to understand just how fun and important and fun studying can be! This school year, in IELTS class I put my terms on WordsMine! and I already feel better about my upcoming test.",
+    "testimonialContent": "WordsMine! đã giúp tôi hiểu thêm về việc cải thiện vốn tự vựng có thể hiệu quả và mang lại nhiều giá trị đến vậy! Trong năm học này, tại lớp học về IELTS, mình đã dùng WordsMine! để lưu tất cả từ vựng mới trong ứng dụng và mình đã cảm thấy tốt hơn rất nhiều cho kỳ thi sắp đến.",
     "testimonialName": "Julien Ng, Ielts 8.0",
 
-    "appDownloadTitle": "Take your learning with you",
+    "appDownloadTitle": "Đồng hành cải thiện vốn từ vựng cùng WordsMine!",
     
-    "ctaTitle": "Ready to start getting better grades?",
+    "ctaTitle": "Sẵn sàng đạt điểm số cao hơn cùng WordsMine?",
     "ctaFullName": "Họ tên",
     "ctaEmail": "Email",
     "ctaInterest": "Sở thích",
     "ctaRule": "Tôi đồng ý với các điều khoản dịch vụ và chính sách bảo mật.",
-    "ctaButton": "Get Started",
+    "ctaButton": "Đăng Ký Dùng Thử",
 
-    "footerAbout": "Về chúng tôi",
-    "footerCompany": "Công ty",
+    "footerAbout": "Về Chúng Tôi",
+    "footerCompany": "Công Ty",
     "footerBlog": "Blog",
-    "footerFeatures": "Tiện ích",
+    "footerFeatures": "Nền Tảng",
     "footerExtension": "WordsMine! Extension",
     "footerMobileApp": "WordsMine! Mobile App",
-    "footerHelp": "Trợ giúp",
-    "footerSignup": "Đăng ký",
-    "footerStatistics": "Số liệu thống kê",
-    "footerAddedWords": "Từ đã thêm: 0",
+    "footerHelp": "Trợ Giúp",
+    "footerSignup": "Đăng Ký",
+    "footerStatistics": "Số Liệu Thống Kê",
+    "footerAddedWords": "Từ Đã Thêm: 0",
 
     "footerEnglish": "Tiếng Anh",
     "footerVietnamese": "Tiếng Việt",
