Translate EN -> VN

--- a/public/i18n/translations/vn.json
+++ b/public/i18n/translations/vn.json
@@ -11,14 +11,14 @@
     "bannerTitle": "Vốn từ vựng phong phú hướng ta đến tương lai không giới hạn!",
     "bannerDes1": "Cách nhanh nhất để học từ vựng",
     "bannerDes2": "Bất kỳ đâu, bất kỳ lúc nào",
-    "bannerTryNowButton": "Đăng Ký Ngay -> ",
+    "bannerTryNowButton": "Đăng Ký Ngay",
 
     "valueConvenientTitle": "Thuận Tiện",
     "valueConvenientDes": "Không bỏ lỡ từ vựng mới mà bạn nhìn thấy hàng ngày!",
     "valueCloudStorageTitle": "Lưu Trữ Đám Mây",
     "valueCloudStorageDes": "Thu thập và ghi nhớ từ vựng mới ở bất kỳ đâu, bất cứ khi nào",
     "valueFlashCardTitle": "Flashcard",
-    "valueFlashCardDes": "Kiểm tra lại để ghi nhớ các từ vựng mới qua chức năng FlashCard",
+    "valueFlashCardDes": "Kiểm tra lại để ghi nhớ các từ vựng mới qua chức năng Flashcard",
     "valueLexicographerTitle": "Chuyên Gia Ngôn Ngữ",
     "valueLexicographerDes": "Cải thiện vốn từ vựng gấp 10 lần",
 
@@ -33,17 +33,17 @@
     "featureSaveFromSelectionTitle": "Lưu từ vựng bất kỳ từ vùng chữ được chọn",
     "featureSaveFromSelectionDes": "Bạn có thể lưu trữ bất kỳ từ nào từ bất kỳ trang nào. Tất cả các từ vựng được lưu lại để xem lại sau này chỉ ở một nơi",
     "featureSaveFromClipboardTitle": "Lưu từ vựng từ đã lưu trong bộ nhớ đệm",
-    "featureSaveFromClipboardDes": "Bạn đang vội? Đừng lo lắng, chúng tôi cũng cho phép bạn lưu các từ mà đã lưu khi đang lướt web",
+    "featureSaveFromClipboardDes": "Bạn đang vội? Đừng lo lắng, chúng tôi cũng cho phép bạn lưu các từ mà đã lưu trong bộ nhớ đệm khi đang lướt web",
     "featureCollectWordsFromMobileTitle": "Lưu từ vựng từ trình duyệt trên điện thoại",
-    "featureCollectWordsFromMobileDes": "Ngay cả khi bạn gặp các tự vựng khi đang lướt web, ta cũng có thể lưu chúng vào kho từ để xem lại sau này",
-    "featureFlashcardToLearnTitle": "Dùng FlashCard để ghi nhớ các từ vựng đã lưu trong kho từ",
+    "featureCollectWordsFromMobileDes": "Ngay cả khi bạn gặp các từ vựng khi đang lướt web, ta cũng có thể lưu chúng vào kho từ để xem lại sau này",
+    "featureFlashcardToLearnTitle": "Dùng Flashcard để ghi nhớ các từ vựng đã lưu trong kho từ",
     "featureFlashcardToLearnDes": "Các từ vựng bạn gặp mỗi ngày sẽ không còn trôi qua nữa, thay vì vậy, nền tảng sẽ giúp bạn ghi nhớ tất cả các từ vựng đó",
     "featureLookupDefinitionTitle": "Tự động cung cấp định nghĩa từ các từ điển danh tiếng",
     "featureLookupDefinitionDes": "Bạn có thể học cách sử dụng các từ vựng trong các ngữ cách khác nhau như người bản ngữ, định nghĩa từ được cung cấp từ các từ điển uy tín giúp bạn có nhiều định nghĩa khác nhau",
     "featureCustomDefinitionTitle": "Thay đổi định nghĩa từ vựng theo ý thích",
     "featureCustomDefinitionDes": "Dựa trên định nghĩa gợi ý, bạn có thể cá nhân hoá lại định nghĩa và cách dùng từ để từ có thể trở nên thân quen hơn",
 
-    "testimonialContent": "WordsMine! đã giúp tôi hiểu thêm về việc cải thiện vốn tự vựng có thể hiệu quả và mang lại nhiều giá trị đến vậy! Trong năm học này, tại lớp học về IELTS, mình đã dùng WordsMine! để lưu tất cả từ vựng mới trong ứng dụng và mình đã cảm thấy tốt hơn rất nhiều cho kỳ thi sắp đến.",
+    "testimonialContent": "WordsMine! đã giúp tôi hiểu thêm về việc cải thiện vốn từ vựng có thể hiệu quả và mang lại nhiều giá trị đến vậy! Trong năm học này, tại lớp học về IELTS, mình đã dùng WordsMine! để lưu tất cả từ vựng mới trong ứng dụng và mình đã cảm thấy tốt hơn rất nhiều cho kỳ thi sắp đến.",
     "testimonialName": "Julien Ng, Ielts 8.0",
 
     "appDownloadTitle": "Đồng hành cải thiện vốn từ vựng cùng WordsMine!",
