--- a/public/i18n/translations/en.json
+++ b/public/i18n/translations/en.json
@@ -1,104 +1,104 @@
 {
-    "headerValue": "Value",
-    "headerOverview": "Overview",
-    "headerTopic": "Topic",
-    "headerFeature": "Feature",
-    "headerTestimonial": "Testimonial",
-    "headerLogin": "Login",
-    "headerRegister": "Register",
-    "headerLogout": "Logout",
+  "headerValue": "Benefits",
+  "headerOverview": "What Is WordsMine!",
+  "headerTopic": "Free Download",
+  "headerFeature": "Feature",
+  "headerTestimonial": "Testimonial",
+  "headerLogin": "Login",
+  "headerRegister": "Register",
+  "headerLogout": "Logout",
 
-    "bannerTitle": "Learn any words, be unstoppable!",
-    "bannerDes1": "The fastest way to learn vocabulary",
-    "bannerDes2": "From everywhere and everytime",
-    "bannerTryNowButton": "Try Now",
+  "bannerTitle": "Learn any words, be unstoppable!",
+  "bannerDes1": "The fastest way to learn vocabulary",
+  "bannerDes2": "From everywhere and everytime",
+  "bannerTryNowButton": "Try Now",
 
-    "valueConvenientTitle": "Convenient",
-    "valueConvenientDes": "Never miss new words you see everyday!",
-    "valueCloudStorageTitle": "Cloud Storage",
-    "valueCloudStorageDes": "Collect and save vocabulary from any where, any time",
-    "valueFlashCardTitle": "Flashcard",
-    "valueFlashCardDes": "Testing your knowledge and being master with smart Flashcard mode",
-    "valueLexicographerTitle": "Lexicographer",
-    "valueLexicographerDes": "Enrich your vocabulary bank 10x times",
+  "valueConvenientTitle": "Convenient",
+  "valueConvenientDes": "Never miss new words you see everyday!",
+  "valueCloudStorageTitle": "Cloud Storage",
+  "valueCloudStorageDes": "Collect and save vocabulary from any where, any time",
+  "valueFlashCardTitle": "Flashcard",
+  "valueFlashCardDes": "Testing your knowledge and being master with smart Flashcard mode",
+  "valueLexicographerTitle": "Lexicographer",
+  "valueLexicographerDes": "Enrich your vocabulary bank 10x times",
 
-    "descriptionTitle": "What is Wordsmine?",
-    "descriptionDes": "Wordsmine is the first second language learning app that helps you collect vocabulary you see in daily Internet-surfing activities, and learn them faster by giving you scientific approaches and contextualized examples taken from reliable sources.",
+  "descriptionTitle": "What is Wordsmine?",
+  "descriptionDes": "Wordsmine is the first second language learning app that helps you collect vocabulary you see in daily Internet-surfing activities, and learn them faster by giving you scientific approaches and contextualized examples taken from reliable sources.",
 
-    "topicTitle": "Give it a try! Let's go!",
-    "topicWebExtension": "Web Extension",
-    "topicMobileApp": "Mobile App",
+  "topicTitle": "Give it a try! Let's go!",
+  "topicWebExtension": "Web Extension",
+  "topicMobileApp": "Mobile App",
 
-    "featureTitle": "What you can do with Wordsmine?",
-    "featureSaveFromSelectionTitle": "Save words from selection",
-    "featureSaveFromSelectionDes": "You can store any words from any pages. All the vocabularies are saved for later reviewing just in one place",
-    "featureSaveFromClipboardTitle": "Save words from clipboard",
-    "featureSaveFromClipboardDes": "You are in hurry? Don't worry, we also allow to you to save words on the go while surfing the net",
-    "featureCollectWordsFromMobileTitle": "Collect words from mobile",
-    "featureCollectWordsFromMobileDes": "Catch some new words when browsing web in mobile, we can capture them too",
-    "featureFlashcardToLearnTitle": "Use flashcard mode to memorize your learning",
-    "featureFlashcardToLearnDes": "No more forgetting every new word you see everyday, we help put them to stay engraved in your memory",
-    "featureLookupDefinitionTitle": "Lookup for definition from reliable sources",
-    "featureLookupDefinitionDes": "Learn to use your words wisely in proper context, word definition is provided from different reputable sources",
-    "featureCustomDefinitionTitle": "Customize your definition as you want",
-    "featureCustomDefinitionDes": "Personalize the word definition to your desire so it can be more memorable only for you",
+  "featureTitle": "What you can do with Wordsmine?",
+  "featureSaveFromSelectionTitle": "Save words from selection",
+  "featureSaveFromSelectionDes": "You can store any words from any pages. All the vocabularies are saved for later reviewing just in one place",
+  "featureSaveFromClipboardTitle": "Save words from clipboard",
+  "featureSaveFromClipboardDes": "You are in hurry? Don't worry, we also allow to you to save words on the go while surfing the net",
+  "featureCollectWordsFromMobileTitle": "Collect words from mobile",
+  "featureCollectWordsFromMobileDes": "Catch some new words when browsing web in mobile, we can capture them too",
+  "featureFlashcardToLearnTitle": "Use flashcard mode to memorize your learning",
+  "featureFlashcardToLearnDes": "No more forgetting every new word you see everyday, we help put them to stay engraved in your memory",
+  "featureLookupDefinitionTitle": "Lookup for definition from reliable sources",
+  "featureLookupDefinitionDes": "Learn to use your words wisely in proper context, word definition is provided from different reputable sources",
+  "featureCustomDefinitionTitle": "Customize your definition as you want",
+  "featureCustomDefinitionDes": "Personalize the word definition to your desire so it can be more memorable only for you",
 
-    "testimonialContent": "WordsMine! has helped me to understand just how fun and important and fun studying can be! This school year, in IELTS class I put my terms on WordsMine! and I already feel better about my upcoming test.",
-    "testimonialName": "Julien Ng, Ielts 8.0",
+  "testimonialContent": "WordsMine! has helped me to understand just how fun and important and fun studying can be! This school year, in IELTS class I put my terms on WordsMine! and I already feel better about my upcoming test.",
+  "testimonialName": "Julien Ng, Ielts 8.0",
 
-    "appDownloadTitle": "Take your learning with you",
-    
-    "ctaTitle": "Ready to start getting better grades?",
-    "ctaFullName": "Your Full Name",
-    "ctaEmail": "Email",
-    "ctaInterest": "Your Interest",
-    "ctaRule": "I agree to the terms of service and privacy policy.",
-    "ctaButton": "Get Started",
+  "appDownloadTitle": "Take your learning with you",
 
-    "footerAbout": "About",
-    "footerCompany": "Company",
-    "footerBlog": "Blog",
-    "footerFeatures": "Features",
-    "footerExtension": "WordsMine! Extension",
-    "footerMobileApp": "WordsMine! Mobile App",
-    "footerHelp": "Help",
-    "footerSignup": "Sign up",
-    "footerStatistics": "Statistics",
-    "footerAddedWords": "Added Words: 0",
+  "ctaTitle": "Ready to start getting better grades?",
+  "ctaFullName": "Your Full Name",
+  "ctaEmail": "Email",
+  "ctaInterest": "Your Interest",
+  "ctaRule": "I agree to the terms of service and privacy policy.",
+  "ctaButton": "Get Started",
 
-    "footerEnglish": "English",
-    "footerVietnamese": "Vietnamese",
+  "footerAbout": "About",
+  "footerCompany": "Company",
+  "footerBlog": "Blog",
+  "footerFeatures": "Features",
+  "footerExtension": "WordsMine! Extension",
+  "footerMobileApp": "WordsMine! Mobile App",
+  "footerHelp": "Help",
+  "footerSignup": "Sign up",
+  "footerStatistics": "Statistics",
+  "footerAddedWords": "Added Words: 0",
 
-    "toolTipContent": "Stay Home And Take Your Learning With You!",
+  "footerEnglish": "English",
+  "footerVietnamese": "Vietnamese",
 
-    "backTo": "Back to",
-    "homePage": "home page",
-    "loginPageTitle": "Login",
-    "or": "OR",
-    "authWithGoogle": "Continue with Google",
-    "emailPlaceholder": "Email",
-    "warningEmptyEmail": "Please input your email",
-    "warningInvalidEmail": "Email is not valid",
-    "passwordPlaceholder": "Password",
-    "warningEmptyPassword": "Please input your password",
-    "continue": "Continue",
-    "loginPageOption": "You do not have account?",
-    "loginPageRegisterOption": "Register",
+  "toolTipContent": "Stay Home And Take Your Learning With You!",
 
-    "registerPageTitle": "Register",
-    "namePlaceholder": "Name",
-    "warningEmptyName": "Please input your name",
-    "warningMinLengthPassword": "Your password should more than 6 characters",
-    "warningMaxLengthPassword": "Your password should less than 15 characters",
-    "warningConfirmPassword": "Please input your confirm password",
-    "warningPasswordNotMatch": "The two password that you entered do not match",
-    "confirmPasswordPlaceholder": "Confirm password",
-    "registerPageOption": "You have an account?",
-    "registerPageLoginOption": "Login",
-    
-    "messageRegisterSuccess": "Register Successfully!",
-    "messageRegisterFail": "Register fail, please try again!",
-    "messageHello": "Hello",
-    "messageLoginSuccess": "you login successfully!",
-    "messageLoginFail": "Something went wrong, please try again"
+  "backTo": "Back to",
+  "homePage": "home page",
+  "loginPageTitle": "Login",
+  "or": "OR",
+  "authWithGoogle": "Continue with Google",
+  "emailPlaceholder": "Email",
+  "warningEmptyEmail": "Please input your email",
+  "warningInvalidEmail": "Email is not valid",
+  "passwordPlaceholder": "Password",
+  "warningEmptyPassword": "Please input your password",
+  "continue": "Continue",
+  "loginPageOption": "You do not have account?",
+  "loginPageRegisterOption": "Register",
+
+  "registerPageTitle": "Register",
+  "namePlaceholder": "Name",
+  "warningEmptyName": "Please input your name",
+  "warningMinLengthPassword": "Your password should more than 6 characters",
+  "warningMaxLengthPassword": "Your password should less than 15 characters",
+  "warningConfirmPassword": "Please input your confirm password",
+  "warningPasswordNotMatch": "The two password that you entered do not match",
+  "confirmPasswordPlaceholder": "Confirm password",
+  "registerPageOption": "You have an account?",
+  "registerPageLoginOption": "Login",
+
+  "messageRegisterSuccess": "Register Successfully!",
+  "messageRegisterFail": "Register fail, please try again!",
+  "messageHello": "Hello",
+  "messageLoginSuccess": "you login successfully!",
+  "messageLoginFail": "Something went wrong, please try again"
 }
