Add Logo Chrome Extension, Fix CSS Description Section

--- a/public/i18n/translations/en.json
+++ b/public/i18n/translations/en.json
@@ -67,7 +67,7 @@
   "footerAddedWords": "Added Words: 0",
 
   "footerEnglish": "English",
-  "footerVietnamese": "Vietnamese",
+  "footerVietnamese": "Tiếng Việt",
 
   "toolTipContent": "Stay Home And Take Your Learning With You!",
 
