--- a/public/i18n/translations/vn.json
+++ b/public/i18n/translations/vn.json
@@ -66,7 +66,7 @@
   "footerStatistics": "Số Liệu Thống Kê",
   "footerAddedWords": "Từ Đã Thêm: 0",
 
-  "footerEnglish": "Tiếng Anh",
+  "footerEnglish": "English",
   "footerVietnamese": "Tiếng Việt",
 
   "toolTipContent": "Hãy ở nhà để bảo vệ sức khỏe của bạn và cộng đồng!",
