--- a/public/i18n/translations/vn.json
+++ b/public/i18n/translations/vn.json
@@ -69,7 +69,7 @@
   "footerEnglish": "English",
   "footerVietnamese": "Tiếng Việt",
 
-  "toolTipContent": "Hãy ở nhà để bảo vệ sức khỏe của bạn và cộng đồng!",
+  "toolTipContent": "Chương trình triển khai giúp hỗ trợ Cộng đồng học Anh Văn đạt kết quả tốt trong đợt COVID-19.",
 
   "backTo": "Quay về",
   "homePage": "trang chủ",
