--- a/public/i18n/translations/en.json
+++ b/public/i18n/translations/en.json
@@ -51,6 +51,7 @@
   "ctaTitle": "Ready to start getting better grades?",
   "ctaFullName": "Your Full Name",
   "ctaEmail": "Email",
+  "ctaPhone": "Phone",
   "ctaInterest": "Your Interest",
   "ctaRule": "I agree to the terms of service and privacy policy.",
   "ctaButton": "Get Started",
