responsive problem section and edit scrollspy

--- a/public/i18n/translations/en.json
+++ b/public/i18n/translations/en.json
@@ -4,6 +4,7 @@
   "headerTopic": "Free Download",
   "headerFeature": "Feature",
   "headerTestimonial": "Testimonial",
+  "headerTryOut": "Try out",
   "headerLogin": "Login",
   "headerRegister": "Register",
   "headerLogout": "Logout",
