--- a/public/i18n/translations/vn.json
+++ b/public/i18n/translations/vn.json
@@ -4,6 +4,7 @@
   "headerTopic": "Dùng Thử",
   "headerFeature": "Chức Năng",
   "headerTestimonial": "Đánh Giá",
+  "headerTryOut": "Dùng thử",
   "headerLogin": "Đăng Nhập",
   "headerRegister": "Đăng Ký",
   "headerLogout": "Đăng Xuất",
