change text in btn authen with google

--- a/public/i18n/translations/vn.json
+++ b/public/i18n/translations/vn.json
@@ -86,7 +86,7 @@
   "homePage": "trang chủ",
   "loginPageTitle": "Đăng nhập",
   "or": "Hoặc",
-  "authWithGoogle": "Đăng nhập với Google",
+  "authWithGoogle": "Google",
   "emailPlaceholder": "Email",
   "warningEmptyEmail": "Email không được bỏ trống",
   "warningInvalidEmail": "Email sai định dạng",
