Add extension pictures to Value section, update site copy, fix minor bugs

--- a/public/i18n/translations/vn.json
+++ b/public/i18n/translations/vn.json
@@ -31,14 +31,14 @@
   "valueLexicographerTitle": "Chuyên Gia Ngôn Ngữ",
   "valueLexicographerDes": "Cải thiện vốn từ vựng gấp 10 lần",
 
-  "descriptionTitle": "WordsMine là gì?",
-  "descriptionDes": "Wordsmine là ứng dụng giúp thu thập các từ vựng bạn thấy xung quanh các hoạt động lướt Internet hàng ngày và học chúng nhanh hơn, được xây dựng cho những bạn muốn cải thiện vốn từ vựng trong thời gian ngắn.",
+  "descriptionTitle": "WordsMine! là gì?",
+  "descriptionDes": "Wordsmine! là ứng dụng giúp thu thập các từ vựng bạn thấy xung quanh qua các hoạt động lướt Internet hàng ngày và ghi nhớ chúng nhanh hơn. WordsMine được xây dựng cho những bạn muốn cải thiện vốn từ vựng hiệu quả trong thời gian ngắn. WordsMine! là viết tắt của Words Mine! - mọi từ vựng bạn muốn sẽ trở thành của bạn!",
 
   "topicTitle": "Dùng Thử WordsMine!",
   "topicWebExtension": "Ứng dụng trên Chrome",
   "topicMobileApp": "Ứng dụng iOS",
 
-  "featureTitle": "Bạn có thể làm gì với WordsMine?",
+  "featureTitle": "Bạn có thể làm gì với WordsMine!?",
   "featureSaveFromSelectionTitle": "Lưu từ vựng bất kỳ từ vùng chữ được chọn",
   "featureSaveFromSelectionDes": "Bạn có thể lưu trữ bất kỳ từ nào từ bất kỳ trang nào. Tất cả các từ vựng được lưu lại để xem lại sau này chỉ ở một nơi",
   "featureSaveFromClipboardTitle": "Lưu từ vựng từ đã lưu trong bộ nhớ đệm",
@@ -75,7 +75,7 @@
   "footerHelp": "Trợ Giúp",
   "footerSignup": "Đăng Ký",
   "footerStatistics": "Số Liệu Thống Kê",
-  "footerAddedWords": "Từ Đã Thêm: 0",
+  "footerAddedWords": "Từ Đã Thêm: 1449 (từ mới)",
 
   "footerEnglish": "English",
   "footerVietnamese": "Tiếng Việt",
